samples/_failures_safe/1761346863_c8507f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6fed324e.c: In function ‘read_input_data’:
./samples/SAFE/__tmp_6fed324e.c:182:5: error: expected expression at end of input
  182 |     if (fgets(sm->buffer,
      |     ^~
./samples/SAFE/__tmp_6fed324e.c:182:9: error: too few arguments to function ‘fgets’
  182 |     if (fgets(sm->buffer,
      |         ^~~~~
In file included from /usr/include/stdio.h:980,
                 from ./samples/SAFE/__tmp_6fed324e.c:2:
/usr/include/x86_64-linux-gnu/bits/stdio2.h:196:1: note: declared here
  196 | fgets (char *__restrict __s, int __n, FILE *__restrict __stream)
      | ^~~~~
./samples/SAFE/__tmp_6fed324e.c:182:5: error: expected declaration or statement at end of input
  182 |     if (fgets(sm->buffer,
      |     ^~
